courses/430_programming-languages/assignment-8/tests/error/error35.nex
yesle (verna) yesho {raspetchatat 4;}
